--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ body{
     background: #777;
     width: 960px;
     font-size: 18px; 
-    border-color: black     
+    border-color: black;
+    margin: auto;     
 }
 
 
@@ -120,6 +121,7 @@ small{
         font-size: 20px;
         border: solid 2px;
         border-radius: 20px;
-        padding: 5px 40px 
+        padding: 5px 40px;
+        text-decoration: none;
 }
 
