--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 body{
+    background-color: silver;
     font-size: 18px;
     line-height: 34px;
     font-family: Arial, Helvetica, sans-serif;
@@ -17,7 +18,7 @@ body{
 }
 
 h1, h2, h3, p{
-    margin-bottom: 0;
+    margin-bottom: 20px;
 }
 
 p:last-child{
@@ -32,25 +33,25 @@ h1, h2, h3{
 
 h1{
     font-size: 30px;
-    line-height: 50px;
-    border-bottom: 5px solid #999;
+    line-height: 49px;
+    border-bottom: 3px solid #ddd;
     padding-bottom: 20px;
 }
 
 h2, h3{
-    font-size: 25px;
+    font-size: 22 px;
 }
 /*header*/
 
 #masterhead{
-    background-color: #fff;
+    background-color:black;
     margin: 0 0 30px;
     z-index: 99;
     color: #fff;
     overflow: auto;
     border-bottom: 2px solid #ccc;
-    width: 100%;
     position: fixed;
+    width: 100%;
 }
 
 #logo{
@@ -75,9 +76,9 @@ nav a{
     text-decoration: none;
     margin-left: 15px;
     display: inline-block;
-    border-left: 1px #999 solid;
-    line-height: 18px;
+    border-left: 1px #efefef solid;
     padding: 15px;
+    line-height: 18px;
 }
 
 nav a:first-child{
@@ -86,26 +87,26 @@ nav a:first-child{
 
 /*main*/
 
-#main{
+#main-container{
     padding-top:130px;
 }
 
-.main{
-    background-color: goldenrod;
+.main-section{
+    background-color:#fff;
     padding: 30px;
     margin: 0 0 40px 0;
     width: 100%;
     max-width: 650px;
     float:left;
-    border:black 2px solid;
+    border:#ddd 1px solid;
 }
 
-.f{
+.auth-image{
     width:200px;
-    padding: 30px;
     height: auto;
     margin-top: 10px;
     float:left;
+    margin-right: 25px;
 }
 /*sidebar*/
 .sidebar{
@@ -114,14 +115,26 @@ nav a:first-child{
     width: 100%;
     max-width: 270px;
     float:right;
-    border:1px solid black;
+    border:1px solid #ddd;
+    margin-bottom: 20px;
 }
 
-h3, sidebar, h2{
-    border-bottom: 2px solid black;
+h3, .sidebar, h2{
+    border-bottom: 2px solid #eee;
     padding-bottom: 20px;
     margin-bottom: 15px;
     line-height: 22px;
+}
+
+.social {
+    width: 62px;
+    height: 62px;
+    margin-top: 8px;
+    margin-right: 5px;
+}
+
+.social:last-child{
+    margin-right: 0;  
 }
 
 /*footer*/
@@ -129,8 +142,10 @@ h3, sidebar, h2{
 footer{
     background-color: #666;
     color:#fff;
+    padding: 30px 0;
     clear:both;
     border-top: 8px solid silver;
+    color: #ccc;
     text-align: center;
     font-size: 12px;
 }
@@ -163,6 +178,7 @@ footer{
     position: absolute;
     bottom:20px;
     padding: 15px;
+    width: 100%;
     line-height: 30px;
     margin-bottom: none;
     font-weight: 300;
@@ -205,4 +221,87 @@ input[type=submit] {
     font-size: 18px;
     cursor: pointer;
 
+}
+
+@media only screen and (max-width: 980px) {
+    body {
+        background-color: #4aaaa5
+    }
+} 
+
+@media only screen and (max-width: 980px) {
+    .container {
+        padding: 0 20px;
+        max-width: 768px;
+        
+    } 
+
+#main-container{
+    padding-top: 130px;
+}
+
+.main-section{
+    max-width: 420px;
+}
+
+.work{
+    width: 100%;
+}
+
+.auth-image{
+    width: 100%;
+    margin-bottom: 20px;
+}
+}
+@media only screen and (max-width: 768px) {
+    body {
+        background-color: gold;
+    }
+}
+    
+@media only screen and (max-width: 768px) {
+    .main-section .sidebar {
+        width: 100%;
+    }
+    #main-container{
+        overflow: auto;
+    }
+
+    .work{
+        width: 47%;
+        margin-bottom: 10px;
+    }
+    .work:nth-child(even){
+        margin-right: 0;
+    }
+
+    .work:nth-child(odd){
+        float: right;
+    }
+
+    .auth-image{
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 640px) {
+    #masterhead{
+        position:static;
+        margin-bottom: 20px;
+    }
+    header ,.container{
+        padding-top: 0;
+    }
+    #main-container{
+        padding-top: 0;
+    }
+    #logo, .work, .auth-image{
+        width:100%;
+    }
+    nav a{
+        width:50%;
+        padding-left: 0;
+        border-left: none;
+        padding-bottom: 10px;
+    }
 }
