--- a/style.css
+++ b/style.css
@@ -157,7 +157,11 @@ footer{
     overflow: auto;
     position: relative;
     float: left;
-    margin: 20px 0 25px;
+    margin: 20px 10px 25px;
+}
+
+.work:hover{
+    cursor: pointer;
 }
 
 
@@ -182,6 +186,15 @@ footer{
     line-height: 30px;
     margin-bottom: none;
     font-weight: 300;
+}
+
+.auth-image:hover{
+    cursor: pointer;
+}
+
+.social:hover{
+    cursor: pointer;
+    
 }
 
 /*contact*/
@@ -223,11 +236,6 @@ input[type=submit] {
 
 }
 
-@media only screen and (max-width: 980px) {
-    body {
-        background-color: #4aaaa5
-    }
-} 
 
 @media only screen and (max-width: 980px) {
     .container {
@@ -252,11 +260,6 @@ input[type=submit] {
     width: 100%;
     margin-bottom: 20px;
 }
-}
-@media only screen and (max-width: 768px) {
-    body {
-        background-color: gold;
-    }
 }
     
 @media only screen and (max-width: 768px) {
