--- a/style.css
+++ b/style.css
@@ -160,9 +160,10 @@ footer{
     margin: 20px 10px 25px;
 }
 
-.work:hover{
+h3:hover{
     cursor: pointer;
 }
+
 
 
 .work:nth-child(even){
@@ -173,6 +174,7 @@ footer{
     width:100%;
     border: 0 none;
     opacity: .8;
+    
 }
 .work h3{
     border-bottom:0;
@@ -188,14 +190,22 @@ footer{
     font-weight: 300;
 }
 
-.auth-image:hover{
+a{
+    text-decoration: none;
+    font-family: 'Passion One', cursive;
     cursor: pointer;
+    transition: box-shadow 1s;
 }
 
+a:hover{
+    cursor: pointer;
+    transition: box-shadow 1s;
+}
 .social:hover{
     cursor: pointer;
     
 }
+
 
 /*contact*/
 
