--- a/style.css
+++ b/style.css
@@ -2,8 +2,52 @@
     box-sizing: border-box;
 }
 
+:root{
+    --wrapper-bg-color: white;
+    --left-bg-color: rgba(223, 39, 39, 0.7);
+    --left-button-hover-color:rgba(161,11,11, 0.3);
+    --right-bg-color: rgba(43,43,43,0.8);
+    --right-button-hover-color: rgba(92,92,92,0.3);
+    --hover-width: 75%;
+    --other-width: 25%;
+    --speed: 1000ms;
+}
+
+html, body{
+    padding: 0;
+    margin: 0;
+    font-family: 'Courier New', Courier, monospace;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+h1{
+    font-size: 4rem;
+    color: black;
+    position: absolute;
+    left: 50%;
+    top: 20%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+}
+
+.button{
+    display:block;
+    position: absolute;
+    left: 50%;
+    top: 40%;
+    height: 2.5rem;
+    padding-top: 1.3rem;
+    width: 15rem;
+    text-align: center;
+    color: black;
+    border: black;
+    
+
+}
 body{
-    background-color: silver;
+    background-color:white;
     font-size: 18px;
     line-height: 34px;
     font-family: Arial, Helvetica, sans-serif;
@@ -15,6 +59,7 @@ body{
     max-width: 960px;
     margin:0 auto;
     clear: both;
+    border: black solid 1px;
 }
 
 h1, h2, h3, p{
